Card - small tweak to image pattern and added teaser variation

--- a/apps/pattern-lab--workshop/src/_patterns/02-components/card/05-card.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/card/05-card.twig
@@ -4,6 +4,7 @@
     {
       pattern: "image",
       src: "/images/placeholders/landscape-16x9-mountains.jpg",
+      imageAttributes: create_attribute(imageAttributes | default({})).addClass("u-bolt-width-1/1"),
       lazyload: false,
       alt: "Anthem Video"
     },
