--- a/apps/pattern-lab--workshop/src/_patterns/02-components/card/00-card-docs.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/card/00-card-docs.twig
@@ -7,6 +7,7 @@
     {
       pattern: "image",
       src: "/images/sample/anthem-video.jpg",
+      imageAttributes: create_attribute(imageAttributes | default({})).addClass("u-bolt-width-1/1"),
       alt: "Anthem Video"
     },
     {
