Band - simplified code example, broke additional examples into code blocks within README, added a few tweaks, adjusted component order

--- a/apps/pattern-lab--workshop/src/_patterns/02-components/band/20-band-flag-variation.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/band/20-band-flag-variation.twig
@@ -34,7 +34,7 @@
   ]
 } %}
 
-<p>Band: Flag with Two Buttons</p>
+<p>Band: Flag with Two Long Buttons</p>
 {% include '@bolt-components-band/band--flag.twig' with {
   eyebrow: {
     text: "Who is Pega?"
