--- a/apps/pattern-lab--workshop/src/_patterns/02-components/band/25-band-theme-variation.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/band/25-band-theme-variation.twig
@@ -7,7 +7,7 @@
 ] %}
 
 {% for theme in exampleThemes %}
-  <p>theme: {{ theme }}</p>
+  <p>Theme: {{ theme }}</p>
   {% include '@bolt-components-band/band--flag.twig' with {
     theme: theme,
     eyebrow: {
