--- a/apps/pattern-lab--workshop/src/_patterns/02-components/band/35-band-teaser-variation.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/band/35-band-teaser-variation.twig
@@ -3,7 +3,8 @@
     {
       pattern: "teaser",
       logo: {
-        src: "/images/band-shapes.svg",
+        src: "/images/content/logos/logo-paypal.svg",
+        invert: true,
         lazyload: false,
       },
       eyebrow: {
@@ -26,7 +27,8 @@
     {
       pattern: "teaser",
       logo: {
-        src: "/images/band-shapes.svg",
+        src: "/images/content/logos/logo-paypal.svg",
+        invert: true,
         lazyload: false,
       },
       eyebrow: {
@@ -49,7 +51,8 @@
     {
       pattern: "teaser",
       logo: {
-        src: "/images/band-shapes.svg",
+        src: "/images/content/logos/logo-paypal.svg",
+        invert: true,
         lazyload: false,
       },
       eyebrow: {
