--- a/apps/pattern-lab--workshop/src/_patterns/02-components/card/15-card-with-teaser.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/card/15-card-with-teaser.twig
@@ -10,6 +10,10 @@
     },
     {
       pattern: "teaser",
+      logo: {
+        src: "/images/content/logos/logo-paypal.svg",
+        lazyload: false,
+      },
       content: "Body text. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
       buttons: [
         {
