Background - Pulled in partial schema data for various demos and a few structural changes/tweaks

--- a/apps/pattern-lab--workshop/src/_patterns/02-components/backgrounds/05-background.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/backgrounds/05-background.twig
@@ -1,4 +1,4 @@
-<div style="height: 400px;">
+<div style="height: 400px; position: relative;">
 
   {% include "@bolt-components-background/background.twig" with {
     opacity: "heavy",
