--- a/apps/pattern-lab--workshop/src/_patterns/02-components/backgrounds/_00-background-band-demo.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/backgrounds/_00-background-band-demo.twig
@@ -1,3 +1,4 @@
+{# The code below is strictly used as a sample for background demos included here #}
 {% embed "@bolt-components-band/band.twig" with {
   size: size | default("large"),
   theme: theme | default("dark"),
