--- a/apps/pattern-lab--workshop/src/_patterns/02-components/backgrounds/15-background-focal-variations.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/backgrounds/15-background-focal-variations.twig
@@ -1,59 +1,23 @@
-<p>Heavy Opacity with Center Focal Point</p>
-{% include "./_00-background-band-demo.twig" with {
-  background: {
-    opacity: "heavy",
-    fill: "gradient",
-    focalPoint: {
-      vertical: "center",
-      horizontal: "center"
-    },
-    contentItems: [
-      {
-        pattern: "image",
-        src: "/images/content/backgrounds/background-tall-4.jpg",
-        lazyload: false
-      }
-    ]
-  },
-  teaserPosition: "center"
-} %}
+{% set schema = get_data('@bolt-components-background/background.schema.yml') %}{# @todo complete schema #}
 
-<p>Heavy Opacity with Left Focal Point</p>
-{% include "./_00-background-band-demo.twig" with {
-  background: {
-    opacity: "heavy",
-    fill: "gradient",
-    focalPoint: {
-      vertical: "center",
-      horizontal: "left"
+{% for horz in schema.properties.focalPoint.properties.horizontal.enum if horz != 'center' %}{# @todo: bolt background currently only reverses gradient on horz = 'left' #}
+  <p>Heavy Opacity with {{  horz|capitalize }} Focal Point</p>
+  {% include "./_00-background-band-demo.twig" with {
+    background: {
+      opacity: "heavy",
+      fill: "gradient",
+      focalPoint: {
+        vertical: "center",
+        horizontal: horz
+      },
+      contentItems: [
+        {
+          pattern: "image",
+          src: "/images/content/backgrounds/background-tall-4.jpg",
+          lazyload: false
+        }
+      ]
     },
-    contentItems: [
-      {
-        pattern: "image",
-        src: "/images/content/backgrounds/background-tall-4.jpg",
-        lazyload: false
-      }
-    ]
-  },
-  teaserPosition: "right"
-} %}
-
-<p>Heavy Opacity with Right Focal Point</p>
-{% include "./_00-background-band-demo.twig" with {
-  background: {
-    opacity: "heavy",
-    fill: "gradient",
-    focalPoint: {
-      vertical: "center",
-      horizontal: "right"
-    },
-    contentItems: [
-      {
-        pattern: "image",
-        src: "/images/content/backgrounds/background-tall-1.jpg",
-        lazyload: false
-      }
-    ]
-  },
-  teaserPosition: "left"
-} %}
+    teaserPosition: horz == 'left' ?? 'right'
+  } %}
+{% endfor %}
