--- a/apps/pattern-lab--workshop/src/_includes/utils/schema-docs.twig
+++ b/apps/pattern-lab--workshop/src/_includes/utils/schema-docs.twig
@@ -9,78 +9,126 @@
   {%- if description %} - {{ description | markdown }} {% endif -%}
 {% endmacro %}
 
-{% macro object(properties) %}
+{% macro propValues(prop) %}
   {% import _self as macros %}
-  <ul>
-    {% for key, prop in properties %}
-      <li>
-        <code>{{ key }}</code>
-        {{ macros.titleAndDescription(prop.title, prop.description, prop.minimum, prop.maximum) }}
+  <ul class="o-bolt-bare-list">
+    {% set enum %}
+      {% for x in prop.enum %}
+        <code>{{ x }}</code>{% if not loop.last %},{% endif %}
+      {% endfor %}
+    {% endset %}
+
+    <li>
+      Type: <code>{{ prop.type }}</code>
+      {% if prop.oneOf %}
+        Must be one of:
         <ul>
-          {% set enum %}
-            {% for x in prop.enum %}
-              <code>{{ x }}</code>{% if not loop.last %},{% endif %}
-            {% endfor %}
-          {% endset %}
-          <li>
-            Type: <code>{{ prop.type }}</code>
-            {% if prop.oneOf %}
-              Must be one of:
-              <ul>
-                {% for item in prop.oneOf %}
-                  <li><code>{{ item.enum|join(',') }}</code>{{ macros.titleAndDescription(item.title, item.description, prop.minimum, prop.maximum) }}</li>
-                {% endfor %}
-              </ul>
-            {%- elseif prop.enum %} - Must be one of: {{ enum }}
-            {% endif %}
-
-            {% if prop.type == 'object' and prop.properties or prop.ref %}
-              {% if prop.ref %}
-                {% set reference = get_data(prop.ref).properties %}
-                <details>
-                  <summary><em>{{ prop.ref }} > Object details</em></summary>
-                  {{ macros.object(reference) }}
-                </details>
-              {% else %}
-                {{ macros.object(prop.properties) }}
-              {% endif %}
-            {% endif %}
-
-            {% if prop.type == 'array' and prop.items %}
-              <ul>
-                <li>Items:</li>
-                {% if prop.items.type == 'object' %}
-                  <ul>
-                    <li>Type: <code>{{ prop.items.type }}</code>{{ macros.titleAndDescription(prop.items.title, prop.items.description, prop.minimum, prop.maximum) }}</li>
-                    <li>Properties:
-                      <ul>
-                        {% for key, property in prop.items.properties %}
-                          <li><code>{{ key }}</code>
-                            {{ macros.titleAndDescription(property.title, property.description, prop.minimum, prop.maximum) }}
-                            {% if property.type %}
-                              <ul>
-                                <li>Type: <code>{{ property.type }}</code></li>
-                                {% if property.type == 'object' and property.properties %}
-                                  <li>Properties:</li>
-                                  {{ macros.object(property.properties) }}
-                                {% endif %}
-                              </ul>
-                            {% endif %}
-                          </li>
-                        {% endfor %}
-                      </ul>
-                    </li>
-                  </ul>
-                {% endif %}
-              </ul>
-            {% endif %}
-          </li>
-          {% if key in loop.parent.required %} <li><strong>Required</strong></li> {% endif %}
-          {% if prop.default %} <li>Default: <code>{{ prop.default }}</code></li> {% endif %}
+          {% for item in prop.oneOf %}
+            <li><code>{{ item.enum|join(',') }}</code>{{ macros.titleAndDescription(item.title, item.description, prop.minimum, prop.maximum) }}</li>
+          {% endfor %}
         </ul>
-      </li>
-    {% endfor %}
+      {%- elseif prop.enum %} - Must be one of: {{ enum }}
+      {% endif %}
+
+      {% if prop.type == 'object' and prop.properties or prop.ref %}
+        {% if prop.ref %}
+          {% set nestedSchema = get_data(prop.ref) %}
+          <details>
+            <summary><em>{{ prop.ref }} > Object details</em></summary>
+            {{ macros.object(nestedSchema) }}
+          </details>
+        {% else %}
+          {{ macros.object(prop.properties) }}
+        {% endif %}
+      {% endif %}
+
+      {% if prop.type == 'array' and prop.items %}
+        <ul>
+          <li>Items:</li>
+          {% if prop.items.type == 'object' %}
+            <ul>
+              <li>Type: <code>{{ prop.items.type }}</code>{{ macros.titleAndDescription(prop.items.title, prop.items.description, prop.minimum, prop.maximum) }}</li>
+              <li>Properties:
+                <ul>
+                  {% for key, property in prop.items.properties %}
+                    <li><code>{{ key }}</code>
+                      {{ macros.titleAndDescription(property.title, property.description, prop.minimum, prop.maximum) }}
+                      {% if property.type %}
+                        <ul>
+                          <li>Type: <code>{{ property.type }}</code></li>
+                          {% if property.type == 'object' and property.properties %}
+                            <li>Properties:</li>
+                            {{ macros.object(property.properties) }}
+                          {% endif %}
+                        </ul>
+                      {% endif %}
+                    </li>
+                  {% endfor %}
+                </ul>
+              </li>
+            </ul>
+          {% endif %}
+        </ul>
+      {% endif %}
+    </li>
+
+    {# if key in loop.parent.required %}
+      <li><strong>Required</strong></li>
+    {% endif #}
+
+    {# if prop.default %}
+      <li>Default: <code>{{ prop.default }}</code></li>
+    {% endif #}
   </ul>
+{% endmacro %}
+
+{% macro object(schema) %}
+  {% set requiredProps = schema.required %}
+  {% import _self as macros %}
+
+  <div class="c-bolt-docs-table">
+    <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Value</th>
+          <th>Description</th>
+          <th>Default</th>
+          <th>Required?</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        {% for key, prop in schema.properties %}
+          <tr class="c-bolt-docs-table__row">
+            <td>{{ key }}</td>
+
+            {% if prop.type == 'object' and prop.ref %}
+              <td colspan="4">{{ macros.propValues(prop) }}</td>
+            {% else %}
+              <td>{{ macros.propValues(prop) }}</td>
+
+              <td>{{ macros.titleAndDescription(prop.title, prop.description | default('-'), prop.minimum, prop.maximum) }}</td>
+
+              <td>
+                {% if prop.default %}
+                  <code>{{ prop.default }}</code>
+                {% else %}
+                  -
+                {% endif %}
+              </td>
+
+              <td>
+              {% if key in requiredProps %}
+                Required
+              {% endif %}
+              </td>
+            {% endif %}
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
 {% endmacro %}
 
 {% import _self as macros %}
@@ -99,4 +147,4 @@
   } only %}
 {% endif %}
 
-{{ macros.object(properties) }}
+{{ macros.object(schema) }}
