--- a/packages/core/styles/01-settings/settings-spacing/_settings-spacing.scss
+++ b/packages/core/styles/01-settings/settings-spacing/_settings-spacing.scss
@@ -25,7 +25,7 @@ $bolt-spacing-values: (
   'xlarge':  4,
   'xxlarge': 8
 );
-@include export-data('spacing/bolt-spacing-scale.data.json', (boltSpacingScale: $bolt-spacing-values));
+@include export-data('spacing/scale.bolt.json', $bolt-spacing-values);
 
 $bolt-spacing-sizes: ();
 
