--- a/apps/pattern-lab--workshop/src/_patterns/01-visual-styles/color-palette/03-accessibility-check.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/01-visual-styles/color-palette/03-accessibility-check.twig
@@ -1,7 +1,5 @@
-{% set bolt_colors = get_data('@bolt-assets/bolt-all-colors.data.json').boltAllColors %}
-
 <div class="o-bolt-grid o-bolt-grid--flex o-bolt-grid--matrix">
-  {% for colorName, palette in bolt_colors %}
+  {% for colorName, palette in bolt.data.colors.all %}
     <div class="o-bolt-grid__cell u-bolt-width-1/3">
 
       <bolt-swatch class="c-bolt-swatch">
