--- a/src/_patterns/02-components/bolt-form/src/_choices.scss
+++ b/src/_patterns/02-components/bolt-form/src/_choices.scss
@@ -4,31 +4,43 @@
 
 $choices-selector: 'choices' !default;
 $choices-font-size-lg: 16px !default;
-$choices-font-size-md: 14px !default;
-$choices-font-size-sm: 12px !default;
+$choices-font-size-md: $choices-font-size-lg !default;
+$choices-font-size-sm: $choices-font-size-lg !default;
 $choices-guttering: 24px !default;
-$choices-border-radius: 2.5px !default;
+$choices-border-radius: $bolt-input-border-radius;
 $choices-border-radius-item: 20px !default;
-$choices-bg-color: #f9f9f9 !default;
-$choices-bg-color-disabled: #EAEAEA !default;
-$choices-bg-color-dropdown: #FFFFFF !default;
-$choices-text-color: #333333 !default;
-$choices-keyline-color: #DDDDDD !default;
+$choices-bg-color: $bolt-input-background-color;
+$choices-bg-color-disabled: $bolt-input-background-color--disabled;
+$choices-bg-color-dropdown: $bolt-input-background-color;
+$choices-text-color: $bolt-input-text-color;
+$choices-keyline-color: $bolt-input-border-color;
 $choices-primary-color: #00BCD4 !default;
-$choices-disabled-color: #eaeaea !default;
+$choices-disabled-color: $bolt-input-text-color--disabled;
 $choices-highlight-color: $choices-primary-color !default;
 $choices-button-icon-path: '../../icons' !default;
 $choices-button-dimension: 8px !default;
 $choices-button-offset: 8px !default;
 
+// Bolt overrides
+$choices-text-color--placeholder: $bolt-input-placeholder-color;
+$choices-text-color--diabled: $bolt-input-text-color--disabled;
+$choices-keyline-color--focus: $bolt-input-border-color--focus;
+$choices-highlighted-bg-color: bolt-color(gray, xlight);
+$choices-line-height: $bolt-input-line-height;
+$choices-box-shadow: $bolt-input-box-shadow--focus;
+$choices-transition: $bolt-input-transition;
+
 .#{$choices-selector} {
   position: relative;
   margin-bottom: $choices-guttering;
+  color: $choices-text-color;
   font-size: $choices-font-size-lg;
+
   &:focus { outline: none; }
   &:last-child { margin-bottom: 0; }
   &.is-disabled {
     .#{$choices-selector}__inner, .#{$choices-selector}__input {
+      color: $choices-text-color--diabled;
       background-color: $choices-bg-color-disabled;
       cursor: not-allowed;
       user-select: none;
@@ -39,7 +51,7 @@ $choices-button-offset: 8px !default;
 
 .#{$choices-selector}[data-type*="select-one"] {
   cursor: pointer;
-  .#{$choices-selector}__inner { padding-bottom: 7.5px; }
+  .#{$choices-selector}__inner { padding-bottom: bolt-v-spacing(small); }
   .#{$choices-selector}__input {
     display: block;
     width: 100%;
@@ -80,7 +92,7 @@ $choices-button-offset: 8px !default;
   }
   &.is-open:after {
     border-color: transparent transparent $choices-text-color transparent;
-    margin-top: -7.5px;
+    margin-top: bolt-v-spacing(small) * -1;
   }
   &[dir="rtl"] {
     &:after {
@@ -117,18 +129,27 @@ $choices-button-offset: 8px !default;
 }
 
 .#{$choices-selector}__inner {
+  @include bolt-padding(small)
+
   display: inline-block;
   vertical-align: top;
   width: 100%;
   background-color: $choices-bg-color;
-  padding: 7.5px 7.5px 3.75px;
   border: 1px solid $choices-keyline-color;
   border-radius: $choices-border-radius;
+  line-height: $choices-line-height;
   font-size: $choices-font-size-md;
   min-height: 44px;
   overflow: hidden;
-  .is-focused &, .is-open & { border-color: darken($choices-keyline-color, 15%); }
-  .is-open & { border-radius: $choices-border-radius $choices-border-radius 0 0; }
+  transition: all $choices-transition;
+
+  .#{$choices-selector}:hover &, .is-focused &, .is-open & {
+    box-shadow: $choices-box-shadow;
+  }
+  .is-open & {
+    border-radius: $choices-border-radius $choices-border-radius 0 0;
+    border-color: $choices-keyline-color--focus;
+  }
   .is-flipped.is-open & { border-radius: 0 0 $choices-border-radius $choices-border-radius; }
 }
 
@@ -140,10 +161,10 @@ $choices-button-offset: 8px !default;
 
 .#{$choices-selector}__list--single {
   display: inline-block;
-  padding: 4px 16px 4px 4px;
+  padding: 0 16px 0 0;
   width: 100%;
   [dir="rtl"] & {
-    padding-right: 4px;
+    padding-right: 0;
     padding-left: 16px;
   }
   .#{$choices-selector}__item { width: 100%; }
@@ -194,7 +215,7 @@ $choices-button-offset: 8px !default;
   overflow: hidden;
   word-break: break-all;
   &.is-active { display: block; }
-  .is-open & { border-color: darken($choices-keyline-color, 15%); }
+  .is-open & { border-color: $choices-keyline-color--focus; }
   .is-flipped & {
     top: auto;
     bottom: 100%;
@@ -238,7 +259,7 @@ $choices-button-offset: 8px !default;
       }
     }
     &.is-highlighted {
-      background-color: mix(#000000, #FFFFFF, 5%);
+      background-color: $choices-highlighted-bg-color;
       &:after { opacity: .5; }
     }
   }
