first pass on icon schema

--- a/apps/pattern-lab--workshop/src/_patterns/02-components/headline/00-headline-docs.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/headline/00-headline-docs.twig
@@ -1,4 +1,4 @@
-{#{% set schema = get_data('@bolt-components-headline/headline.schema.yml') %}#}
+{% set schema = get_data('@bolt-components-headline/headline.schema.yml') %}
 {% set readme = source('@bolt-components-headline/README.md') %}
 {% set code %} {% verbatim %}
 {% include "@bolt-components-headline/headline.twig" with {
