--- a/apps/pattern-lab--workshop/src/_patterns/02-components/headline/10-headline-tag-variations.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/headline/10-headline-tag-variations.twig
@@ -5,6 +5,8 @@
   h4: "large",
   h5: "medium",
   h6: "small",
+  p: "xsmall",
+  span: "xsmall",
 } %}
 
 {% for tag, heading in headingExamples %}
