add schema validation to the headline component

--- a/packages/components/bolt-headline/src/_typography.twig
+++ b/packages/components/bolt-headline/src/_typography.twig
@@ -86,7 +86,9 @@
   {% endif %}
 </{{ tag }}>
 
-
+{% if enable_json_schema_validation %}
+  {{ validate_data_schema('@bolt-components-headline/headline.schema.yml', _self) }}
+{% endif %}
 
 {# set iconpos = iconpos | default("right") #}
 
