feat: add hasErrors parameter to form input template

--- a/src/_patterns/02-components/bolt-form/demo/form-elements/form-element-demo-input-element.twig
+++ b/src/_patterns/02-components/bolt-form/demo/form-elements/form-element-demo-input-element.twig
@@ -4,11 +4,12 @@
   {% include("@bolt/form-label.twig") with {
     "title": title,
     "displayType": labelDisplayType
-  } %}
+  } only %}
 {% endset %}
 
 {% set children %}
   {% include("@bolt/form-input.twig") with {
-    "attributes": inputAttributes
-  } %}
+    "attributes": inputAttributes,
+    "hasErrors": errors is not empty
+  } only %}
 {% endset %}
