--- a/src/_patterns/02-components/bolt-form/src/inputs/form-select.twig
+++ b/src/_patterns/02-components/bolt-form/src/inputs/form-select.twig
@@ -1,3 +1,5 @@
+{# TODO: Add hasErrors parameter to support server-side invalidation #}
+
 {% set attributes = create_attribute(attributes | default({})) %}
 {% set classes = ["c-bolt-input", "c-bolt-input--select"] %}
 
