--- a/src/_patterns/02-components/bolt-form/src/inputs/form-textarea.twig
+++ b/src/_patterns/02-components/bolt-form/src/inputs/form-textarea.twig
@@ -1,3 +1,5 @@
+{# TODO: Add hasErrors parameter to support server-side invalidation #}
+
 {% set attributes = create_attribute(attributes | default({})) %}
 {% set wrapperAttributes = create_attribute(wrapperAttributes | default({})) %}
 {% set classes = ['c-bolt-input'] %}
