--- a/src/_patterns/02-components/bolt-form/src/inputs/form-input.twig
+++ b/src/_patterns/02-components/bolt-form/src/inputs/form-input.twig
@@ -13,29 +13,43 @@ Available variables:
 #}
 
 {% set attributes = create_attribute(attributes | default({})) %}
-{% set _classes = [] %}
 {% set _type = attributes.type.__tostring %}
 {% set _icons = [] %}
 
-{% if attributes.disabled %}
-  {% set _icons = _icons|merge(['lock']) %}
-{% endif %}
+{% set _classes = [
+  'c-bolt-input',
+  'c-bolt-input--' ~ attributes.type
+] %}
 
 {% if hasErrors %}
   {% set _classes = _classes|merge(['is-invalid']) %}
 {% endif %}
 
-{% if _type == "search" %}
-  {% set _icons = _icons|merge(['search']) %}
-{% endif %}
-
-{% set _classes = _classes|merge([
-  'c-bolt-input',
-  'c-bolt-input--' ~ attributes.type
-]) %}
-
 <input{{ attributes.addClass(_classes) }} />{{ children }}
 
-<div class="c-bolt-input-icons">
-  {% include "@bolt/form-icons.twig" with {"icons": _icons } only %}
-</div>
+{#
+Some input types support icons, others don't.  Note that if icons are supported though, we'll always output
+the icons wrapping markup, even if there are no icons to show, for the following reasons:
+ - It allows js to detect if icons are supported (by its presence)
+ - It allows js to not have to rebuild the wrapper markup itself
+ - It adds the invalid icon (even if a field is not invalid) so that it can just be shown or hidden with js and CSS
+#}
+{% if _type in ['email', 'number', 'password', 'search', 'text', 'tel'] %}
+  {% set _supportsIcons = TRUE %}
+{% endif %}
+
+{% if _supportsIcons %}
+  {% if attributes.disabled %}
+    {% set _icons = _icons|merge(['lock']) %}
+  {% endif %}
+
+  {% if _type == "search" %}
+    {% set _icons = _icons|merge(['search']) %}
+  {% endif %}
+
+  <div class="c-bolt-input-icons">
+    {% include "@bolt/form-icons.twig" with {
+      "icons": _icons
+    } only %}
+  </div>
+{% endif %}
