fix: Set default input type in form input example file
Drupal should always have an input type set, so this shouldn't be an
issue except in PL demos

--- a/src/_patterns/02-components/bolt-form/demo/form-elements/form-element-demo-input-element.twig
+++ b/src/_patterns/02-components/bolt-form/demo/form-elements/form-element-demo-input-element.twig
@@ -8,6 +8,9 @@
 {% endset %}
 
 {% set children %}
+  {# Default input type is text #}
+  {% set inputAttributes = inputAttributes|merge({'type': inputAttributes.type|default('text')}) %}
+
   {% include("@bolt/form-input.twig") with {
     "attributes": inputAttributes,
     "hasErrors": errors is not empty
