--- a/src/_patterns/02-components/bolt-form/demo/form-elements/form-element-demo-checkbox.twig
+++ b/src/_patterns/02-components/bolt-form/demo/form-elements/form-element-demo-checkbox.twig
@@ -3,8 +3,7 @@
 {% set label %}
   {% include("@bolt/form-label.twig") with {
     "title": labelTitle,
-    "displayType": "inline",
-    "inputElementType": "checkbox",
+    "displayType": "inline-checkbox",
     "attributes": {
       "for": elementId
     }
