--- a/src/_patterns/02-components/bolt-form/demo/form-elements/form-element-demo-radio.twig
+++ b/src/_patterns/02-components/bolt-form/demo/form-elements/form-element-demo-radio.twig
@@ -3,8 +3,7 @@
 {% set label %}
   {% include("@bolt/form-label.twig") with {
     "title": labelTitle,
-    "displayType": "inline",
-    "inputElementType": "radio",
+    "displayType": "inline-radio",
     "attributes": {
       "for": elementId
     }
