fix: conditionally swap out button rendering when being used in a form; workaround to eliminate the need to wire things up manually

--- a/src/_patterns/02-components/bolt-form/demo/forms/form-demo-campaign-landing.twig
+++ b/src/_patterns/02-components/bolt-form/demo/forms/form-demo-campaign-landing.twig
@@ -85,10 +85,11 @@
   {% include "@bolt/button.twig" with {
     "text": "Download Now",
     "width": "full",
-    "tag": "button",
+    "tag": "submit",
     "icon": {
       "name": "download"
     }
   } only %}
+
 
 {% endset %}
