--- a/apps/pattern-lab--workshop/src/_includes/utils/schema-docs.twig
+++ b/apps/pattern-lab--workshop/src/_includes/utils/schema-docs.twig
@@ -9,6 +9,25 @@
   {%- if description %} - {{ description | markdown }} {% endif -%}
 {% endmacro %}
 
+{% macro getRefSchema(ref, id) %}
+  {% import _self as macros %}
+  {% if ref %}
+    {% set reference = get_data(ref) %}
+    {% set theRef = id ? id : 'properties' %}
+    <details>
+      <summary><em>{{ ref }} > <code>{{ reference.type|capitalize }}</code> details</em></summary>
+      {% if id =='enum' %}
+        Type: <code>{{ reference.type }}</code> - Must be one of:
+        {% for x in reference[theRef] %}
+          <code>{{ x }}</code>{% if not loop.last %},{% endif %}
+        {% endfor %}
+      {% else %}
+        {{ macros.object(reference[theRef]) }}
+      {% endif %}
+    </details>
+  {% endif %}
+{% endmacro %}
+
 {% macro object(properties) %}
   {% import _self as macros %}
   <ul>
@@ -23,7 +42,7 @@
             {% endfor %}
           {% endset %}
           <li>
-            Type: <code>{{ prop.type }}</code>
+            {% if prop.type  %}Type: <code>{{ prop.type }}</code>{% endif %}
             {% if prop.oneOf %}
               Must be one of:
               <ul>
@@ -34,16 +53,12 @@
             {%- elseif prop.enum %} - Must be one of: {{ enum }}
             {% endif %}
 
-            {% if prop.type == 'object' and prop.properties or prop.ref %}
-              {% if prop.ref %}
-                {% set reference = get_data(prop.ref).properties %}
-                <details>
-                  <summary><em>{{ prop.ref }} > Object details</em></summary>
-                  {{ macros.object(reference) }}
-                </details>
-              {% else %}
-                {{ macros.object(prop.properties) }}
-              {% endif %}
+            {% if prop.type == 'object' and prop.properties %}
+              {{ macros.object(prop.properties) }}
+            {% endif %}
+
+            {% if prop.ref %}
+              {{ macros.getRefSchema(prop.ref, prop.id) }}
             {% endif %}
 
             {% if prop.type == 'array' and prop.items %}
