--- a/apps/pattern-lab--workshop/src/_patterns/02-components/button/05-button-tags.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/button/05-button-tags.twig
@@ -1,9 +1,9 @@
-{% set schema = get_data('@bolt/button.schema.json') %}
+{% set schema = get_data('@bolt-components-button/button.schema.json') %}
 
 {% for tag in schema.properties.tag.enum %}
-  <h3>Button Tag: {{ align }}</h3>
+  <p>Button Tag: {{ tag }}</p>
 
-  {% include "@bolt/button.twig" with {
+  {% include "@bolt-components-button/button.twig" with {
     "tag": tag,
     "text": tag ~ "-tag based Button"
   } %}
